Fixed squished textarea in notifications

--- a/frontend/src/Styles/Notification.css
+++ b/frontend/src/Styles/Notification.css
@@ -125,9 +125,6 @@ overflow-y: auto;
     width: 50%;
     margin-left: 25%;
     margin-top: 15px;
-    margin-bottom: 50px;
-    display:flex;
-    justify-content: center;
     height: 40px;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
